--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -3,5 +3,7 @@ body{
     padding: 0;
 }
 h1, h2 {
+    font-family: "Open Sans", sans-serif;
+    font-weight: 800;
     padding: 10px 15px 20px 25px;
 }
