--- a/assets/styles/reset.css
+++ b/assets/styles/reset.css
@@ -1,4 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+
 /* http://meyerweb.com/eric/tools/css/reset/ 
+
    v2.0 | 20110126
    License: none (public domain)
 */
