--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,9 +1,29 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Edu+VIC+WA+NT+Hand:wght@400..700&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Edu+VIC+WA+NT+Hand:wght@400..700&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+
+
+
 body{
     margin: 0;
     padding: 0;
 }
 h1, h2 {
-    font-family: "Open Sans", sans-serif;
-    font-weight: 800;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 2000;
+    font-style: italic;
     padding: 10px 15px 20px 25px;
+}
+h3{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+p{font-family: 'Times New Roman', Times, serif;
+
+}
+h1, h2, h3{
+    font-size: 300%;
+}
+p {
+    font-size: 30px;
 }
