--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Edu+VIC+WA+NT+Hand:wght@400..700&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Edu+VIC+WA+NT+Hand:wght@400..700&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Edu+VIC+WA+NT+Hand:wght@400..700&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Edu+VIC+WA+NT+Hand:wght@400..700&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 
 
 body{
@@ -9,16 +9,19 @@ body{
     padding: 0;
 }
 h1, h2 {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Edu VIC WA NT Hand", sans-serif;
     font-weight: 2000;
     font-style: italic;
     padding: 10px 15px 20px 25px;
+    color: goldenrod;
 }
 h3{
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: "Edu VIC WA NT Hand", sans-serif;
+    color: rgb(212, 10, 10);
 }
 
 p{font-family: 'Times New Roman', Times, serif;
+    color: rgb(10, 65, 10);
 
 }
 h1, h2, h3{
@@ -26,4 +29,5 @@ h1, h2, h3{
 }
 p {
     font-size: 30px;
+    font-family: "Edu VIC WA Hand ";
 }
